fix(post): add bottom margin, remove text alignment

--- a/styles/post.module.scss
+++ b/styles/post.module.scss
@@ -1,3 +1,7 @@
+.post {
+  margin-bottom: var(--space4);
+}
+
 .header-container {
   margin-top: var(--space2);
   margin-bottom: var(--space5);
@@ -50,7 +54,6 @@
 }
 
 .post p {
-  text-align: justify;
   font-weight: 400;
   line-height: 28px;
 }
@@ -68,6 +71,10 @@
 }
 
 @media only screen and (max-width: 640px) {
+  .post {
+    margin-bottom: var(--space2);
+  }
+
   .header-container {
     flex-direction: column;
     align-items: flex-start;
